# fey-data

./: Dockerfile  README.md  dune-project  fey-data.config  gamedata.opam  generated.txt  test.fish  watch.fish
lib/: dataset.ml  dune  io.ml  parity.ml  processing.ml  server.ml  validate.ml
lib/config/: constants.ml  dune
lib/csharp/: README.md  annotations.ml  dune  generator_converter.ml  generator_types.ml  generator_visitor.ml  main.ml  output.ml  types.ml  utils.ml
lib/data/: affix.atd  animation.atd  audio.atd  character.atd  common.atd  cursor.atd  drop.atd  dune  dune.inc  effect.atd  entity.atd  entity_util.ml  equipment.atd  image.atd  model.atd  projectile.atd  quality.atd  requirement.atd  skill.atd  stat.atd  status.atd  validation.ml  weapon.atd
lib/util/: dune  string.ml
test/: dune  test_config.ml  test_csharp.ml  test_dataset.ml  test_fixtures.ml  test_gamedata.ml  test_io.ml  test_parity.ml  test_util.ml  test_validation.ml
test/data/: invalid_entity.json  sample_dataset.json  sample_entity.json  sample_weapon.json
